# dap721-template-canister

./: .gitignore  Cargo.toml  Makefile.toml  README.md  dfx.json
.github/workflows/: build-test.yml
integration-tests/: Cargo.toml
integration-tests/src/: actor.rs  client.rs  lib.rs  wasm.rs
integration-tests/src/client/: dip721.rs
integration-tests/tests/: inspect.rs  integration_tests.rs  nft.rs
scripts/: deploy_functions.sh  deploy_ic.sh  deploy_local.sh  dfx-build.sh  dfx-setup.sh  did.sh  integration-tests.sh
src/: app.rs  did.rs  dip721-canister.did  inspect.rs  storable.rs  utils.rs
src/app/: inspect.rs  storage.rs  test_utils.rs
src/app/storage/: tokens.rs
src/declarations/dip721-canister/: dip721-canister.did.d.ts  dip721-canister.did.js  index.d.ts  index.js
src/dip721_canister/: Cargo.toml  dip721-canister.did
src/dip721_canister/declarations/dip721-canister/: dip721-canister.did.d.ts  index.js
src/dip721_canister/src/: app.rs  did.rs  http.rs  inspect.rs  lib.rs
src/dip721_canister/src/app/: configuration.rs  inspect.rs  memory.rs
src/dip721_canister/src/app/storage/: tokens.rs  tx_history.rs
