[package]
name = "dip721-canister"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso-dev/dip721-template-canister"
version = "0.1.0"

[[bin]]
name = "dip721-canister-did"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
candid = "0.10"
dip721-rs = "0.1"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
itertools = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
did = []

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

[profile.release]
lto = true
opt-level = 'z'
