[workspace]
members = ["integration-tests", "src/dip721_canister"]
resolver = "2"

[workspace.package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EKOKEtoken/ekoke"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
candid = "0.10"
dip721-rs = "0.2"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
itertools = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

[profile.release]
lto = true
opt-level = 'z'
