[package]
name = "integration-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1"
candid = { workspace = true }
dip721-rs = { workspace = true }
pocket-ic = "2"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
